<resources>
    <string name="app_name">Catfacar</string>

    <string name="tvInfoCrea">
        Première utilisation ?
        Créez votre profil pour pouvoir commander et profiter au mieux de cette application.
    </string>
    <string name="tvResConfirm">
        Votre réservation à bien été prise en compte. Votre numéro de réservation est le :
    </string>
    <string name="tvInfoRes">
        Vous pouvez retrouver ce numéro dans votre historique des réservations.
        Il est obligatoire pour pouvoir recupérez votre livre
    </string>
    <string name="tvFormUser">CREATION DE VOTRE PROFIL</string>
    <string name="tvCommande">RESERVER UN LIVRE</string>
    <string name="tvChamps">TOUT LES CHAMPS SONT OBLIGATOIRES.</string>
    <string name="tvChampsEtoile">TOUT LES CHAMPS AVEC UNE ETOILE (*) SONT OBLIGATOIRES.</string>
    <string name="tvNoms">NOM</string>
    <string name="tvPrenom">PRENOM</string>
    <string name="tvTel">TELEPHONE</string>
    <string name="tvMail">ADRESSE MAIL</string>
    <string name="tvNomLivre">NOM DU LIVRE*</string>
    <string name="tvAuteur1">AUTEUR N°1*</string>
    <string name="tvAuteur2">AUTEUR N°2</string>
    <string name="tvEdition">EDITION*</string>

    <string name="btnHist">HISTORIQUE DES RESERVATIONS</string>
    <string name="btnCommande">RESERVER UN LIVRE</string>
    <string name="btnContinuer">CONTINUER</string>
    <string name="btnCreer">CREER</string>
    <string name="btnReserver">RESERVER</string>
    <string name="btnAnnuler">ANNULER</string>
    <string name="btnRetour">RETOUR</string>
    <string name="btnRetourAcc">RETOURNER AU MENU</string>

    <string name="tabRes">RESERVATION</string>
    <string name="tabNom">NOM</string>
    <string name="tabAuteur1">AUTEUR N°1</string>
    <string name="tabAuteur2">AUTEUR N°2</string>
    <string name="tabEdition">EDITION</string>
    <string name="tabDate">DATE</string>
</resources>
